<resources>
    <string name="app_name">MiniTikTok</string>
    <string name="home_tab">首页</string>
    <string name="place_tab">西湖</string>
    <string name="message_tab">消息</string>
    <string name="profile_tab">我</string>
    <string name="login_pref_name">login_preferences</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="userId">学号</string>
    <string name="exit">退出账号</string>
    <string name="follow_text">已关注</string>
    <string name="unfollow_text">关注</string>
    <string name="recommend">推荐</string>
    <!-- "消息" -->
    <string name="fans">粉丝</string>
    <string name="contact">互动消息</string>
    <string name="DouYin">抖音小助手</string>
    <!-- "同城"  -->
    <string name="place_fragment">Hello place fragment</string>
    <!-- "首页" -->
    <!-- "我" -->
    <string name="sig">个性签名</string>
    <string name="sig_content">就挺秃然的……</string>
    <!-- "上传" -->
    <string name="upload_fragment">Hello upload fragment</string>

    <!-- activity_video_recording -->
    <string name="record_start">开始录制</string>
    <string name="record_stop">结束录制</string>
    <string name="record_saving">处理中……</string>
    <string name="button">切换摄像头</string>
    <string name="video_path">video_path</string>
    <string name="photo_path">photo_path</string>
    <string name="zoom">对焦</string>
    <string name="take_photo">拍摄</string>

    <string name="text1">粉丝</string>
    <string name="text2">赞</string>
    <string name="text3">\@我的</string>
    <string name="text4">评论</string>
    <string name="tv_userName">visitor</string>
    <string name="tv_user_id">001</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>